--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
   pre_build:
     commands:
       - echo logging to ecr to push the newly created image
-      - $ (aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 065456982440.dkr.ecr.us-east-1.amazonaws.com)
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 065456982440.dkr.ecr.us-east-1.amazonaws.com
 
   build:
     commands:
